# diploma

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  socket.html
api/: Dockerfile  go.mod  go.sum
api/config/: config.go  (+1 more)
auth/: go.mod  go.sum
chat/: Dockerfile  go.mod  go.sum
data/: Makefile  docker-compose.yaml  go.mod  go.sum  local.env  todo.md
deployment/: backend.docker-compose.yaml  data.docker-compose.yaml  frontend.docker-compose.yaml  infra.docker-compose.yaml  kafka.docker-compose.yaml  ml.docker-compose.yaml  nginx.Dockerfile  ngixn.Dockerfile
domain/: Dockerfile  go.mod  go.sum
frontend/: package.json  pnpm-lock.yaml
migrations/: 20250501151313_init_auth_schema.sql  (+9 more)
ml/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  synthetic_dataset.jsonl
ml/data/pb/data/v1/: model_pb2_grpc.py  service_pb2.py  service_pb2_grpc.py
ml/ml/: server.py
ml/ml/pb/ml/v1/: model_pb2.py  model_pb2.pyi  service_pb2.py
ml/pb/ml/v1/: service_pb2_grpc.py
ml/src/: RAG_pipeline.py  config.py  data.json  data_client.py  foo.py  giga_client.py  multi_query.py  ollama_client.py  optuna_pipline.py  optuna_rag_params.py  ragas_metrics.py  rerank.py  sample_generate.py  server.py
ml/src/data/v1/: model_pb2.py  model_pb2.pyi  model_pb2_grpc.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
ml/src/ml/v1/: model_pb2.py  model_pb2.pyi  model_pb2_grpc.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
ml/src/proto/ml/v1/: service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
ml/src/utils/: logger.py
(+576 files in other folders)
