[project]
name = "ml"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = ["cookiecutter-data-science>=2.2.0", "grpcio>=1.71.0", "grpcio-tools>=1.71.0", "ruff>=0.11.7"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
